Revert "Navbar dropdown in mobile landscape going offscreen bug fix"
This reverts commit e30e04f9affd2d39b54834a683ebbb5e0c98bc90.

--- a/css/master.css
+++ b/css/master.css
@@ -195,9 +195,3 @@ main {
     display: none !important;
   }
 }
-
-.navbar-nav > .dropdown {
-    max-height: 75vh;
-    height: auto;
-    overflow-x: hidden;
-}
